--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
   <html>
     <head>
       <meta charset="utf-8">
@@ -105,10 +106,12 @@
 
         <label for="email">Email:</label>
         <input id="email" type="email">
+        <button id="botaoEnviar">Enviar</button>
       </form>
 
-      <button>Enviar</button>
       
+     <script type="text/javascript" src="js/script.js"></script>
+
     </body>
   </html>
 
